resolving dashboard quotation display

--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -15,11 +15,11 @@
     <!-- --------------------------- -->
     <section id="search-section">
         <fieldset>
-            <label for="column-selection">Rechercher par :</label>
+            <label for="column-selection">Rechercher par : </label>
             <select name="column-selection" id="column-selection"></select>
         </fieldset>
         <fieldset>
-            <label for="searchbar">Valeur :</label> 
+            <label for="searchbar">Valeur : </label> 
             <input id="searchbar" type="text" name="searchbar" placeholder="Search..">
         </fieldset>
     </section>
@@ -40,15 +40,15 @@
 <!-- ------------------------------------------------------------------------------------- -->
 <aside id="left-aside">
     <ul>
-        <li><a href="#" id="user-link">Utilisateurs</a></li>
-        <li><a href="#" id="info-link">Infos</a></li>
-        <li><a href="#" id="message-link">Messages</a></li>
-        <li><a href="#" id="template-link">Templates</a></li>
-        <li><a href="#" id="category-link">Catégories</a></li>
-        <li><a href="#" id="review-link">Avis</a></li>
-        <li><a href="#" id="appointment-link">Rendez-vous</a></li>
-        <li><a href="#" id="quotation-link">Devis</a></li>
-        <li><a href="#" id="tag-link">Tags</a></li>
+        <li><a href="#control-section" id="user-link">Utilisateurs</a></li>
+        <li><a href="#control-section" id="info-link">Infos</a></li>
+        <li><a href="#control-section" id="message-link">Messages</a></li>
+        <li><a href="#control-section" id="template-link">Templates</a></li>
+        <li><a href="#control-section" id="category-link">Catégories</a></li>
+        <li><a href="#control-section" id="review-link">Avis</a></li>
+        <li><a href="#control-section" id="appointment-link">Rendez-vous</a></li>
+        <li><a href="#control-section" id="quotation-link">Devis</a></li>
+        <li><a href="#control-section" id="tag-link">Tags</a></li>
     </ul>
 </aside>
 <script type="module" src="assets/js/dashboard.js"></script>
