--- a/assets/styles/scss/views/_contact.scss
+++ b/assets/styles/scss/views/_contact.scss
@@ -2,7 +2,7 @@
 
 .contact-container
 {
-  #heading-section
+  #main-header
   {
     background-image: url("../../images/backgrounds/contact-background.jpg");
     #tagline-container
