--- a/assets/styles/scss/views/_homepage.scss
+++ b/assets/styles/scss/views/_homepage.scss
@@ -2,7 +2,7 @@
 
 .homepage-container
 {
-  #heading-section
+  #main-header
   {
     background-image: url("../../images/backgrounds/homepage-background.jpg");
     #tagline-container
