--- a/assets/styles/scss/views/_shop.scss
+++ b/assets/styles/scss/views/_shop.scss
@@ -2,7 +2,7 @@
 
 .shop-container
 {
-  #heading-section
+  #main-header
   {
     background-image: url("../../images/backgrounds/shop-background.jpg");
     #tagline-container
