--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -2,13 +2,13 @@
 <!-- --------------------------------PARTIE PRINCIPALE(VIEW)------------------------------ -->
 <!-- ------------------------------------------------------------------------------------- -->
 <main class="dashboard-container" id="dashboard-container">
-    <section id="heading-section">
+    <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
                 "When KodingCore taking control"
             </p>
         </div>
-    </section>
+    </header>
     <h1>Dashboard</h1>
     <!-- --------------------------- -->
     <!-- ----SECTION DE RECHERCHE--- -->
