--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -1,11 +1,11 @@
 <main id="homepage-container" class="homepage-container">
-    <section id="heading-section">
+    <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
                 "KodingCore, when your dreams are taking shape"
             </p>
         </div>
-    </section>
+    </header>
     <h1>Accueuil</h1>
     <section id="presentation">
         <h2>Qui sommes nous?</h2>
