--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -15,13 +15,13 @@
     }
 ?>
 <main class="account-container">
-    <section id="heading-section">
+    <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
                 Gestion du compte. Les reglages, c'est ici!
             </p>
         </div>
-    </section>
+    </header>
     <h1>Mon compte</h1>
     <form action="index.php?route=account" method="POST" id="account_form">
         <fieldset>
