--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -8,13 +8,13 @@
     }
 ?>
 <main class="contact-container" id="contact-container">
-    <section id="heading-section">
+    <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
                 Besoin d'aide où D'un renseignement? Une demande?
             </p>
         </div>
-    </section>
+    </header>
     <h1>Envoyer un message à l'administrateur</h1>
     <form action="index.php?route=contact" method="POST" id="contact_form">
         <fieldset>
