--- a/views/user/shop.phtml
+++ b/views/user/shop.phtml
@@ -1,11 +1,11 @@
 <main id="shop-container" class="shop-container">
-    <section id="heading-section">
+    <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
                 Ici, c'est la vitrine. Consultez les templates!
             </p>
         </div>
-    </section>
+    </header>
     <h1>Vitrine</h1>
     <section id="templates-section">
     <?php
