--- a/assets/styles/scss/views/_account.scss
+++ b/assets/styles/scss/views/_account.scss
@@ -2,7 +2,7 @@
 
 .account-container
 {
-  #heading-section
+  #main-header
   {
     background-image: url("../../images/backgrounds/account-background.jpg");
     #tagline-container
