--- a/views/layout.phtml
+++ b/views/layout.phtml
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="https://i.goopics.net/wovpgb.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="assets/styles/css/main.css">
+    <link rel="stylesheet" href="assets/styles/css/style.css">
     <script src="https://kit.fontawesome.com/a2be3c71ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
