--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -11,7 +11,7 @@
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
-                Besoin d'aide où D'un renseignement? Une demande?
+                Besoin d'aide, d'un renseignement?
             </p>
         </div>
     </header>
