--- a/views/homepage.phtml
+++ b/views/homepage.phtml
@@ -6,7 +6,7 @@
             </p>
         </div>
     </header>
-    <h1>Accueuil</h1>
+    <h1>Accueil</h1>
     <section id="presentation">
         <h2>Qui sommes nous?</h2>
         <p>
