--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -9,6 +9,8 @@
 @use 'typo/typographie';
 
 @use 'views/homepage';
+@use 'views/login';
+@use 'views/register';
 @use 'views/shop';
 @use 'views/account';
 @use 'views/dashboard';
