--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -8,6 +8,13 @@
     }
 ?>
 <main class="login-container" id="login-container">
+    <header id="main-header">
+        <div id="tagline-container">
+            <p id="tagline">
+                Bienvenue! connectez-vous.
+            </p>
+        </div>
+    </header>
     <h1>Connexion</h1>
     <form action="index.php?route=login" method="POST" id="login_form">
         <fieldset>
