--- a/views/guest/register.phtml
+++ b/views/guest/register.phtml
@@ -7,6 +7,13 @@
     }
 ?>
 <main class="register-container" id="register-container">
+    <header id="main-header">
+        <div id="tagline-container">
+            <p id="tagline">
+                Développons ensemble votre projet!
+            </p>
+        </div>
+    </header>
     <h1>Créer un compte</h1>
     <form action="index.php?route=register" method="POST" id="register_form">
         <fieldset>
