--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -11,7 +11,7 @@
     <header id="main-header">
         <div id="tagline-container">
             <p id="tagline">
-                Bienvenue! connectez-vous.
+                Bienvenue! Connectez-vous.
             </p>
         </div>
     </header>
