--- a/views/user/quote-request.phtml
+++ b/views/user/quote-request.phtml
@@ -32,7 +32,7 @@
             <input type="checkbox" name="inscription" id="inscription">
         </fieldset>
         <fieldset>
-            <label for="buy">Achats / ventes où commandes</label>
+            <label for="buy">Achats / ventes</label>
             <input type="checkbox" name="buy" id="buy">
         </fieldset>
         <fieldset>
