--- a/assets/styles/scss/typo/_typographie.scss
+++ b/assets/styles/scss/typo/_typographie.scss
@@ -21,7 +21,7 @@ html{
     }
     h1
     {
-        margin-left: 2rem;
+        text-align: center;
         text-decoration: underline;
         font-size: 2rem;
     }
